force-app/main/default/objects/RD_Inlet_Ring_Part_Number__c/RD_Inlet_Ring_Part_Number__c.object-meta.xml
<CustomObject>
    <label>RD Inlet Ring Part Number</label>
    <nameField>
        <label>Inlet Ring Part Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RD Inlet Ring Part Number</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>