force-app/main/default/objects/RD_Inlet_Ring_Part_Number__c/fields/CSPECS__c.field-meta.xml
<CustomField>
    <fullName>CSPECS__c</fullName>
    <label>CSPECS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>