force-app/main/default/objects/RD_Inlet_Ring_Part_Number__c/fields/MCIR__c.field-meta.xml
<CustomField>
    <fullName>MCIR__c</fullName>
    <label>MCIR</label>
    <length>255</length>
    <type>Text</type>
</CustomField>