force-app/main/default/objects/RD_Inlet_Ring_Part_Number__c/fields/Seat_Code__c.field-meta.xml
<CustomField>
    <fullName>Seat_Code__c</fullName>
    <label>Seat Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>