force-app/main/default/objects/RD_Inlet_Ring_Part_Number__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>InletRingPartNumber__c</columns>
    <columns>PTC__c</columns>
    <columns>STC__c</columns>
    <columns>SZC__c</columns>
    <columns>MCIR__c</columns>
    <columns>DSCVAR__c</columns>
    <columns>CSPECS__c</columns>
    <columns>Thickness__c</columns>
    <columns>SourceCode__c</columns>
    <columns>Thck_Code__c</columns>
    <columns>TestingCode__c</columns>
    <columns>OptionCode__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>